# django-hogwarts

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: test.yml  vesion_test.yml
apps/products/: models.py  urls.py  views.py
config/: asgi.py  settings.py  urls.py
django_hogwarts/: asgi.py  settings.py  wsgi.py
docs/: auto_urls.md  conventions.md  gen_templates.md  gen_urls.md  gen_views.md  gen_views_example.md  index.md  installation.md  package.json  pnpm-lock.yaml
docs/.vitepress/: config.ts
docs/pages/: autourl.md  index.md
example_config/: settings.py  urls.py  wsgi.py
hogwarts/: _test_views.py  autourl.py  codegen.py  models.py  tests.py  urls.py  utils.py  views.py
hogwarts/magic_templates/: gen_templates.py
hogwarts/magic_tests/: constants.py  factory.py  template.py  testcase.py
hogwarts/magic_urls/: __init__.py  _base.py  auto_urls.py  autourls.py  base.py  decorators.py  gen_urls.py  genurls.py  urls_scanner.py  utils.py
hogwarts/magic_views/: __init__.py  gen_imports.py  gen_views.py
hogwarts/migrations/: 0001_initial.py  0002_article.py  0003_article_author.py
hogwarts/scaffold/: create.html  detail.html  list.html  update.html
hogwarts/tests/: autourl_tests.py  autourls_tests.py  codegen_tests.py  genurls_tests.py  genviews_tests.py  url_scanner_tests.py  utils_tests.py
posts/: factories.py  generated_views.py  models.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
templates/: base.html  create.html  detail.html  list.html  menu.html
templates/categories/: category_create.html  (+3 more)
(+28 files in other folders)
