[tool.poetry]
name = "django_hogwarts"
version = "0.1.0"
description = ""
authors = ["mrAdiletDev <adiletdj19@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.2"

[tool.poetry.dev-dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
